assets/css/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Header */

header {
  position: sticky;
  top: 0px;
  z-index: 100;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}

.discount {
  background: black;
  color: white;
  font-size: 1.4rem;
}

.discount .container {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 8px;
  padding-bottom: 8px;
}

.discount .text {
  text-align: center;
}

.discount .now {
  font-weight: 500;
  text-decoration: underline;
  text-underline-offset: 0.2em;
  color: var(--color-secondary);
  cursor: pointer;
}

.x-icon {
  position: absolute;
  right: 100px;
  cursor: pointer;
}

.logo {
  font-size: 3.2rem;
  font-weight: 700;
  font-family: var(--font-primary);
}

/* Navbar */

.nav {
  background-color: #fff;
  flex-shrink: 1;
}

.nav .container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  padding-top: 24px;
  padding-bottom: 24px;
}

.nav .menu {
  display: none;
  color: var(--color-primary);
  cursor: pointer;
}

.nav .close-icon {
  cursor: pointer;
}

.navbar {
  flex-shrink: 0;
}

.nav-list {
  list-style-type: none;
  display: flex;
  align-items: center;
  gap: 24px;
}

.nav-item {
  flex-shrink: 0;
}

.nav-item {
  font-size: 1.6rem;
}

.nav-item:hover {
  text-decoration: underline;
  text-underline-offset: 2px;
}

.searchbar-container {
  position: relative;
  width: 577px;
  flex-shrink: 1;
}

.searchbar-container .lookup {
  position: absolute;
  left: 26px;
  top: 50%;
  transform: translateY(-50%) translateX(-50%);
  font-size: 1.6rem;
  color: #909090;
  cursor: pointer;
}

.searchbar {
  font-family: var(--font-secondary);
  font-size: 1.6rem;
  padding: 12px 52px;
  border-radius: 25px;
  background: #f0f0f0;
  border: none;
  outline: none;
  width: 100%;
}

.cart-and-user {
  display: flex;
  align-items: center;
  gap: 14px;
}

.cart-and-user .icon {
  font-size: 1.6rem;
  cursor: pointer;
}

/* Sidebar */
.sidebar {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 50%;
  z-index: 200;
  background-color: rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(100px);
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
  display: none;
  flex-direction: column;
}

.sidebar .nav-item {
  width: 100%;
  display: flex;
}

.sidebar .nav-link {
  width: 100%;
  padding: 12px 0 12px 20px;
}

.sidebar .nav-link:hover {
  background-color: var(--color-neutral);
}

/* Hero Section */
.hero {
  background-color: var(--color-neutral);
}

.hero .container {
  display: flex;
  padding-top: 103px;
  padding-bottom: 116px;
  position: relative;
  overflow: hidden;
}

.hero .info {
  width: 48%;
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.hero .slogan {
  font-size: calc(2rem + 3vw);
  font-weight: 700;
  font-family: var(--font-primary);
  line-break: auto;
}

.hero .desc {
  font-size: 1.6rem;
  color: var(--color-primary);
  opacity: 0.6;
}

.hero .btn {
  max-width: 210px;
  padding: 15px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--color-primary);
  background-color: var(--color-secondary);
  font-weight: 500;
  font-size: 1.6rem;
  border: none;
  border-radius: 30px;
  transition: all 300ms ease;
}

.hero .btn:hover {
  background-color: var(--color-primary);
  color: var(--color-secondary);
}

.hero .statistics {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
}

.hero .statistics .group {
  border-right: 1px solid rgba(var(--color-primary-rgb), 0.1);
  padding-left: 32px;
  padding-right: 32px;
}

.hero .statistics .group:last-child {
  border: none;
}

.hero .statistics .number {
  font-size: calc(2rem + 1vw);
  font-weight: 700;
}

.hero .statistics .aspect {
  font-size: 1.6rem;
  color: var(--color-primary);
  opacity: 0.6;
}

/* Image */
.hero .image-wrapper {
  width: min(45%, 600px);
  position: absolute;
  right: 0;
  bottom: -30vh;
}

.hero .image {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* Brands */

.brands {
  background-color: var(--color-primary);
}

.brands .container {
  padding-top: 44px;
  padding-bottom: 44px;
}

.brand-list {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.brand-item {
  max-width: 15%;
}

.brand-item img {
  width: 100%;
  object-fit: cover;
}

/* New Arrivals */
.arrivals {
  background: var(--color-secondary);
  border-bottom: 1px solid rgba(var(--color-primary-rgb), 0.1);
}

.arrivals .container {
  padding-top: 72px;
  padding-bottom: 64px;
}

.product-section .product-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 20px;
}

.product-section .product-img-wrapper {
  width: 100%;
  height: 300px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--color-product-bg);
  border-radius: 16px;
}

.product-section .product-image {
  max-width: 100%;
  max-height: 80%;
  object-fit: contain;
  transition: all 300ms ease;
}

.product-section .title {
  margin-bottom: 55px;
}

.product-info {
  margin-top: 16px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.product-name {
  font-weight: 700;
  font-size: 2rem;
}

.product-item {
  cursor: pointer;
}

.product-item:hover .product-image {
  transform: scale(1.07);
}

.product-item .review {
  display: flex;
  align-items: center;
  gap: 13px;
}

.product-item .rating {
  font-size: 1.4rem;
}

.product-item .max {
  color: rgba(var(--color-primary-rgb), 0.5);
}

.product-item .prices {
  display: flex;
  align-items: center;
  gap: 12px;
}

.product-item .org-price,
.product-item .discount-price {
  font-weight: 700;
  font-size: 2.4rem;
}

.product-item .discount-price {
  color: rgba(var(--color-primary-rgb), 0.5);
  text-decoration: line-through;
}
/* ... */

